<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bab_home"
        android:icon="@drawable/ic_home"
        android:title="Home" />

    <item
        android:id="@+id/bab_favourite"
        android:icon="@drawable/ic_favorite_border_black"
        android:title="Favourite" />

    <item
        android:id="@+id/bab_post"
        android:icon="@drawable/ic_add_box_green"
        android:title="Jio" />

    <item
        android:id="@+id/bab_chat"
        android:icon="@drawable/ic_chat"
        android:title="Messages" />

    <item
        android:id="@+id/bab_profile"
        android:icon="@drawable/ic_profile"
        android:title="Profile" />


</menu>