<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202124"
    tools:context=".settings.ChangePasswordPage">

    <include
        android:id="@+id/tbTempTopBar"
        layout="@layout/top_app_bar_noline" />

    <TextView
        android:id="@+id/tvDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete Account"
        android:textColor="@color/baseRed"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbTempTopBar"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
    android:id="@+id/tvConfirmDelete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Please enter email address and password to delete this account."
    android:textColor="@color/baseWhite"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvConfirmWarning"
    app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/tvConfirmWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="WARNING: Deleting your account is an irreversible action!"
        android:textColor="@color/baseRed"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeleteAccount"
        app:layout_constraintVertical_bias="0.041" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmDelete"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiletConfirmEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/baseWhite"
            android:textColorHint="@color/baseGrey"
            android:inputType="textEmailAddress"
            android:hint="Email address" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmEmail"
        tools:layout_editor_absoluteX="0dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiletConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/baseWhite"
            android:textColorHint="@color/baseGrey"
            android:inputType="textPassword"
            android:hint="Password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnConfirmCDelete"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/baseRed"
        android:text="Confirm delete"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/baseBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword"
        app:layout_constraintVertical_bias="0.03" />

</androidx.constraintlayout.widget.ConstraintLayout>